--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,13 @@
 # ignore everything in the root except the "wp-content" directory.
 /*
 !wp-content/
-
-# ignore all files starting with .
-.*
-
-# track this file .gitignore (i.e. do NOT ignore it)
+!README.md
 !.gitignore
-
-# track .editorconfig file (i.e. do NOT ignore it)
-!.editorconfig
-
-# track readme.md in the root (i.e. do NOT ignore it)
-!readme.md
-
-# ignore all files that start with ~
-~*
-
-# ignore OS generated files
-ehthumbs.db
-Thumbs.db
-
-# ignore Editor files
-*.sublime-project
-*.sublime-workspace
-*.komodoproject
-
-# ignore log files and databases
-*.log
-*.sql
-*.sqlite
-
-# ignore compiled files
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-
-# ignore packaged files
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+!.htaccess
+!wp-config.php
 
 # ignore everything in the "wp-content" directory, except:
-# "mu-plugins" directory
-# "plugins" directory
-# "themes" directory
+# "mu-plugins", "plugins", "themes" directory
 wp-content/*
 !wp-content/mu-plugins/
 !wp-content/plugins/
@@ -64,5 +19,10 @@ wp-content/plugins/hello.php
 # ignore specific themes
 wp-content/themes/twenty*/
 
-# ignore node/grunt dependency directories
+# ignore node dependency directories
 node_modules/
+
+# ignore log files and databases
+*.log
+*.sql
+*.sqlite
